[tool.poetry]
name = "brain-game"
version = "0.1.0"
description = ""
authors = ["iliya sinitcyn <baner1337228@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_game"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.5"

[tool.poetry.scripts]
say-hello = "brain_game.scripts.say_hello:main"

[tool.poetry.dev-dependencies]
ipython = "7.16.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
